// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Button/> properly with defaultProps 1`] = `
<button
  class="StyledButton__Wrapper-sc-1x4y9in-0 bsqhTU"
>
  Test
</button>
`;

exports[`Renders <Button/> properly with secondary props 1`] = `
<button
  class="StyledButton__Wrapper-sc-1x4y9in-0 loMEba"
>
  Test
</button>
`;
